# Velkor

./: .env.example  .gitignore  README.md  agent-platform-prd-v2.md  config.docker.yaml  config.example.yaml  docker-compose.yml
api/: Dockerfile  package-lock.json  package.json
api/src/: index.ts
api/src/lib/: core-client.ts  types.ts
api/src/middleware/: auth.ts
api/src/routes/: audit.ts  auth.ts  conversations.ts  documents.ts  memory.ts  pulse.ts  retention.ts  schedules.ts  skills.ts  tasks.ts  ws.ts
cli/: package-lock.json  package.json
cli/src/: configure.ts  generators.ts  index.ts  ops.ts  prereqs.ts  setup.ts  ui.ts
core/: Cargo.toml  Dockerfile
core/crates/audit/: Cargo.toml
core/crates/audit/src/: lib.rs  logger.rs
core/crates/auth/: Cargo.toml
core/crates/auth/src/: lib.rs
core/crates/config/: Cargo.toml
core/crates/config/src/: lib.rs
core/crates/db/: Cargo.toml
core/crates/db/src/: lib.rs
core/crates/documents/: Cargo.toml
core/crates/documents/src/: extractors.rs  lib.rs  store.rs
core/crates/memory/: Cargo.toml
core/crates/memory/src/: lib.rs  postgres.rs  service.rs
core/crates/models/: Cargo.toml
core/crates/models/src/: anthropic.rs  embeddings.rs  lib.rs  openai_compat.rs  router.rs
core/crates/observability/: Cargo.toml
core/crates/observability/src/: lib.rs
core/crates/orchestrator/: Cargo.toml
core/crates/orchestrator/src/: delegation.rs  lib.rs  tasks.rs
core/crates/pulse/: Cargo.toml
core/crates/pulse/src/: lib.rs
core/crates/retention/: Cargo.toml
core/crates/retention/src/: lib.rs
core/crates/runtime/: Cargo.toml
core/crates/runtime/src/: context.rs  lib.rs  prompt.rs  react.rs
core/crates/scheduler/: Cargo.toml
core/crates/scheduler/src/: lib.rs
core/crates/security/: Cargo.toml
core/crates/security/src/: lib.rs
core/crates/skills/: Cargo.toml
core/crates/skills/src/: index.rs  lib.rs  parser.rs  store.rs
core/crates/tools/: Cargo.toml
core/crates/tools/src/: lib.rs  registry.rs
core/crates/tools/src/builtin/: documents.rs  memory.rs  mod.rs  skills.rs  web_fetch.rs  web_search.rs
core/crates/triggers/: Cargo.toml
core/crates/triggers/src/: crud.rs  file_watch.rs  lib.rs  processor.rs  template.rs  webhook.rs
core/src/: main.rs  maintenance.rs  schedule_tools.rs
core/src/routes/: audit.rs  chat.rs  conversations.rs  documents.rs  memory.rs  mod.rs  pulse.rs  retention.rs  schedules.rs  skills.rs  tasks.rs  triggers.rs  users.rs  webhooks.rs
migrations/: 001_initial_schema.sql  002_seed_defaults.sql  003_background_tasks.sql  004_memory_importance.sql  005_triggers.sql
scripts/: init-db.sh  init-minio.sh  install.bat  install.ps1  install.sh
web/: Dockerfile  nginx.conf  package-lock.json  package.json
web/src/: App.tsx
web/src/components/: ChatView.tsx  FileUpload.tsx  Sidebar.tsx  ToolIndicator.tsx
web/src/hooks/: useWebSocket.ts
web/src/lib/: api.ts
web/src/pages/: Admin.tsx  Chat.tsx  Login.tsx  Settings.tsx
web/src/stores/: auth.ts  chat.ts  notifications.ts
