[package]
name = "velkor-auth"
version.workspace = true
edition.workspace = true

[dependencies]
velkor-db = { path = "../db" }
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
