[package]
name = "velkor-models"
version.workspace = true
edition.workspace = true

[dependencies]
velkor-config = { path = "../config" }
velkor-memory = { path = "../memory" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio-stream = "0.1"
reqwest-eventsource = "0.6"
