[package]
name = "velkor-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
velkor-runtime = { path = "../runtime" }
velkor-db = { path = "../db" }
tokio.workspace = true
tokio-cron-scheduler.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
