[package]
name = "velkor-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
velkor-runtime = { path = "../runtime" }
velkor-memory = { path = "../memory" }
velkor-models = { path = "../models" }
velkor-tools = { path = "../tools" }
velkor-audit = { path = "../audit" }
velkor-db = { path = "../db" }
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
cron = "0.15"
