[package]
name = "velkor-skills"
version.workspace = true
edition.workspace = true

[dependencies]
velkor-db = { path = "../db" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
pgvector.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
