[package]
name = "velkor-skills"
version.workspace = true
edition.workspace = true

[dependencies]
velkor-db = { path = "../db" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
sqlx.workspace = true
pgvector.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
regex.workspace = true
