[package]
name = "velkor-tools"
version.workspace = true
edition.workspace = true

[dependencies]
velkor-models = { path = "../models" }
velkor-config = { path = "../config" }
velkor-memory = { path = "../memory" }
velkor-documents = { path = "../documents" }
velkor-skills = { path = "../skills" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
