[package]
name = "velkor-triggers"
version.workspace = true
edition.workspace = true

[dependencies]
velkor-pulse = { path = "../pulse" }
velkor-runtime = { path = "../runtime" }
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
regex.workspace = true
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
glob = "0.3"
